tests/files/lexer_tests/should_fail/116.cmdr
//Should not parse due to unterminated scope
for (i = 0; i < 10; i++) {echo hi;